# goose-checker

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
goose_checker/: chains.py  cli.py  context.py  diff.py  goose_ascii.py  models.py  prompts.py  response_schema.py
tests/: conftest.py  example_diff.txt  name_only_diff.txt  test_chains.py  test_context.py  test_diff.py  test_models.py
tests/mock_diff/: example_diff.txt  git_diff_tf_s3.txt  git_diff_tf_secrets.txt  name_only_diff.txt
tests/mock_repo_tf/prod/: s3.tf
